# crypto-mta-cpp

./: CMakeLists.txt  README.md
cmake/: CryptoMTAConfig.cmake.in
examples/: CMakeLists.txt  example.cpp
proto/: cmd.txt  mta.proto
src/: CMakeLists.txt
src/crypto-mta/: mta.cpp  mta.h  mta.pb.cc  mta.pb.h
test/: CMakeLists.txt  mta-test.cpp
